--- a/master/etcd/etcd-conf.yml
+++ b/master/etcd/etcd-conf.yml
@@ -1,5 +1,5 @@
 ---
-name: 'my-k8s-master'
+name: 'k8s-master'
 data-dir: /var/lib/etcd
 initial-advertise-peer-urls: http://192.168.176.1:2380
 listen-peer-urls: http://0.0.0.0:2380
