--- a/node3/etcd/etcd-conf.yml
+++ b/node3/etcd/etcd-conf.yml
@@ -1,5 +1,5 @@
 ---
-name: 'my-k8s-node3'
+name: 'node3'
 data-dir: /var/lib/etcd
 initial-advertise-peer-urls: http://192.168.176.3:2380
 listen-peer-urls: http://0.0.0.0:2380
