--- a/master/haproxy/haproxy.cfg
+++ b/master/haproxy/haproxy.cfg
@@ -1,10 +1,13 @@
 defaults
   mode tcp
-  log "fd@1"
+  log stdout format raw daemon
 
 listen etcd-balanse
   bind :2379,:2380
   balance roundrobin
+  timeout client 5s
+  timeout server 10s
+  timeout connect 5s
   server master 192.168.176.1
   server node2 192.168.176.4
   server node3 192.168.176.3
