--- a/node2/haproxy/docker-compose.yml
+++ b/node2/haproxy/docker-compose.yml
@@ -1,8 +1,15 @@
 version: "3.7"
 services:
   haproxy:
-    image: haproxy:latest
+    build:
+      context: .
+      image: hap-kepld:latest
+    image: hap-kepld:latest
     container_name: haproxy
+    command: ["haproxy",
+              "-f",
+              "/usr/local/etc/haproxy/haproxy.cfg"
+             ]
     restart: unless-stopped
     volumes:
       - type: bind
