--- a/master/haproxy/docker-compose.yml
+++ b/master/haproxy/docker-compose.yml
@@ -1,6 +1,9 @@
 version: "3.7"
 services:
   haproxy:
+    build:
+      context: .
+      image: hap-kepld:latest
     image: hap-kepld:latest
     container_name: haproxy
     command: ["haproxy",
