--- a/master/haproxy/haproxy.cfg
+++ b/master/haproxy/haproxy.cfg
@@ -2,8 +2,8 @@ defaults
   mode tcp
   log stdout format raw daemon
 
-listen etcd-balanse
-  bind :2379,:2380
+listen etcd-balance
+  bind 192.168.176.5:2379,192.168.176.5:2380
   balance roundrobin
   timeout client 5s
   timeout server 10s
@@ -12,3 +12,9 @@ listen etcd-balanse
   server node2 192.168.176.4
   server node3 192.168.176.3
   
+listen k8s-master
+  bind 192.168.176.5:6443,192.168.176.5:10250,192.168.176.5:10251,192.168.176.5:10252
+  timeout client 5s
+  timeout server 10s
+  timeout connect 5s
+  server master 192.168.176.1
