--- a/master/k8s/kubeadm-config.yml
+++ b/master/k8s/kubeadm-config.yml
@@ -2,6 +2,8 @@ apiVersion: kubeadm.k8s.io/v1beta1
 kind: ClusterConfiguration
 kubernetesVersion: stable
 controlPlaneEndpoint: "k8s-lb:6443"
+networking:
+  podSubnet: "10.1.0.0/21"
 etcd:
   external:
     endpoints:
