--- a/master/k8s/monitoring/prometheus.yml
+++ b/master/k8s/monitoring/prometheus.yml
@@ -92,6 +92,10 @@ data:
     global:
       scrape_interval: 30s
       scrape_timeout: 30s
+    remote_write:
+    - url: http://clickhouse-promus:8123
+    remote_read:
+    - url: http://clickhouse-promus:8123
     scrape_configs:
     - job_name: 'kubernetes-apiservers'
       kubernetes_sd_configs:
@@ -141,8 +145,6 @@ data:
       relabel_configs:
       - source_labels: [__address__]
         target_label: __param_target
-      - target_label: __address__
-        replacement: blackbox-exporter.example.com:9115
       - source_labels: [__param_target]
         target_label: instance
       - action: labelmap
@@ -162,8 +164,6 @@ data:
         regex: (.+);(.+);(.+)
         replacement: ${1}://${2}${3}
         target_label: __param_target
-      - target_label: __address__
-        replacement: blackbox-exporter.example.com:9115
       - source_labels: [__param_target]
         target_label: instance
       - action: labelmap
