--- a/master/k8s/monitoring/prometheus.yml
+++ b/master/k8s/monitoring/prometheus.yml
@@ -93,9 +93,9 @@ data:
       scrape_interval: 30s
       scrape_timeout: 30s
     remote_write:
-    - url: http://clickhouse-promus:8123
+    - url: "http://influxdb-promus:8086/api/v1/prom/write?db=prometheus&u=prometheus"
     remote_read:
-    - url: http://clickhouse-promus:8123
+    - url: "http://influxdb-promus:8086/api/v1/prom/read?db=prometheus&u=prometheus"
     scrape_configs:
     - job_name: 'kubernetes-apiservers'
       kubernetes_sd_configs:
