--- a/master/k8s/monitoring/influxdb.yml
+++ b/master/k8s/monitoring/influxdb.yml
@@ -26,7 +26,7 @@ spec:
         livenessProbe:
           failureThreshold: 5
           httpGet:
-            path: /
+            path: /metrics
             port: 8086
             scheme: HTTP
           initialDelaySeconds: 60
