--- a/master/k8s/monitoring/prometheus.yml
+++ b/master/k8s/monitoring/prometheus.yml
@@ -95,93 +95,250 @@ data:
     remote_read:
     - url: "http://influxdb-promus:8086/api/v1/prom/read?db=prometheus&u=prometheus"
     scrape_configs:
-    - job_name: 'kubernetes-apiservers'
+    - job_name: prometheus
+      honor_timestamps: true
+      scrape_interval: 1m
+      scrape_timeout: 10s
+      metrics_path: /metrics
+      scheme: http
+      static_configs:
+      - targets:
+        - localhost:9090
+    - job_name: kubernetes-apiservers
+      honor_timestamps: true
+      scrape_interval: 1m
+      scrape_timeout: 10s
+      metrics_path: /metrics
+      scheme: https
       kubernetes_sd_configs:
       - role: endpoints
-      scheme: https
+      bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
       tls_config:
         ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-      bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+        insecure_skip_verify: true
       relabel_configs:
       - source_labels: [__meta_kubernetes_namespace, __meta_kubernetes_service_name, __meta_kubernetes_endpoint_port_name]
-        action: keep
+        separator: ;
         regex: default;kubernetes;https
-    - job_name: 'kubernetes-nodes'
+        replacement: $1
+        action: keep
+    - job_name: kubernetes-nodes
+      honor_timestamps: true
+      scrape_interval: 1m
+      scrape_timeout: 10s
+      metrics_path: /metrics
       scheme: https
-      tls_config:
-        ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-      bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
       kubernetes_sd_configs:
       - role: node
+      bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+      tls_config:
+        ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+        insecure_skip_verify: true
       relabel_configs:
-      - action: labelmap
+      - separator: ;
         regex: __meta_kubernetes_node_label_(.+)
-      - target_label: __address__
+        replacement: $1
+        action: labelmap
+      - separator: ;
+        regex: (.*)
+        target_label: __address__
         replacement: kubernetes.default.svc:443
+        action: replace
       - source_labels: [__meta_kubernetes_node_name]
+        separator: ;
         regex: (.+)
         target_label: __metrics_path__
-        replacement: /api/v1/nodes/${1}/proxy/metrics
-    - job_name: 'kubernetes-service-endpoints'
+        replacement: /api/v1/nodes/$1/proxy/metrics
+        action: replace
+    - job_name: kubernetes-nodes-cadvisor
+      honor_timestamps: true
+      scrape_interval: 1m
+      scrape_timeout: 10s
+      metrics_path: /metrics
+      scheme: https
+      kubernetes_sd_configs:
+      - role: node
+      bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+      tls_config:
+        ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+        insecure_skip_verify: true
+      relabel_configs:
+      - separator: ;
+        regex: __meta_kubernetes_node_label_(.+)
+        replacement: $1
+        action: labelmap
+      - separator: ;
+        regex: (.*)
+        target_label: __address__
+        replacement: kubernetes.default.svc:443
+        action: replace
+      - source_labels: [__meta_kubernetes_node_name]
+        separator: ;
+        regex: (.+)
+        target_label: __metrics_path__
+        replacement: /api/v1/nodes/$1/proxy/metrics/cadvisor
+        action: replace
+    - job_name: kubernetes-service-endpoints
+      honor_timestamps: true
+      scrape_interval: 1m
+      scrape_timeout: 10s
+      metrics_path: /metrics
+      scheme: http
       kubernetes_sd_configs:
       - role: endpoints
       relabel_configs:
-      - action: labelmap
+      - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_scrape]
+        separator: ;
+        regex: "true"
+        replacement: $1
+        action: keep
+      - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_scheme]
+        separator: ;
+        regex: (https?)
+        target_label: __scheme__
+        replacement: $1
+        action: replace
+      - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_path]
+        separator: ;
+        regex: (.+)
+        target_label: __metrics_path__
+        replacement: $1
+        action: replace
+      - source_labels: [__address__, __meta_kubernetes_service_annotation_prometheus_io_port]
+        separator: ;
+        regex: ([^:]+)(?::\d+)?;(\d+)
+        target_label: __address__
+        replacement: $1:$2
+        action: replace
+      - separator: ;
         regex: __meta_kubernetes_service_label_(.+)
+        replacement: $1
+        action: labelmap
       - source_labels: [__meta_kubernetes_namespace]
-        action: replace
+        separator: ;
+        regex: (.*)
         target_label: kubernetes_namespace
-      - source_labels: [__meta_kubernetes_service_name]
+        replacement: $1
         action: replace
+      - source_labels: [__meta_kubernetes_service_name]
+        separator: ;
+        regex: (.*)
         target_label: kubernetes_name
-    - job_name: 'kubernetes-services'
-      metrics_path: /probe
-      params:
-        module: [http_2xx]
+        replacement: $1
+        action: replace
+      - source_labels: [__meta_kubernetes_pod_node_name]
+        separator: ;
+        regex: (.*)
+        target_label: kubernetes_node
+        replacement: $1
+        action: replace
+    - job_name: prometheus-pushgateway
+      honor_labels: true
+      honor_timestamps: true
+      scrape_interval: 1m
+      scrape_timeout: 10s
+      metrics_path: /metrics
+      scheme: http
       kubernetes_sd_configs:
       - role: service
       relabel_configs:
-      - source_labels: [__address__]
-        target_label: __param_target
-      - source_labels: [__param_target]
-        target_label: instance
-      - action: labelmap
-        regex: __meta_kubernetes_service_label_(.+)
-      - source_labels: [__meta_kubernetes_namespace]
-        target_label: kubernetes_namespace
-      - source_labels: [__meta_kubernetes_service_name]
-        target_label: kubernetes_name
-    - job_name: 'kubernetes-ingresses'
-      metrics_path: /probe
+      - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_probe]
+        separator: ;
+        regex: pushgateway
+        replacement: $1
+        action: keep
+    - job_name: kubernetes-services
+      honor_timestamps: true
       params:
-        module: [http_2xx]
+        module:
+        - http_2xx
+      scrape_interval: 1m
+      scrape_timeout: 10s
+      metrics_path: /probe
+      scheme: http
       kubernetes_sd_configs:
-      - role: ingress
+      - role: service
       relabel_configs:
-      - source_labels: [__meta_kubernetes_ingress_scheme,__address__,__meta_kubernetes_ingress_path]
-        regex: (.+);(.+);(.+)
-        replacement: ${1}://${2}${3}
+      - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_probe]
+        separator: ;
+        regex: "true"
+        replacement: $1
+        action: keep
+      - source_labels: [__address__]
+        separator: ;
+        regex: (.*)
         target_label: __param_target
+        replacement: $1
+        action: replace
+      - separator: ;
+        regex: (.*)
+        target_label: __address__
+        replacement: blackbox
+        action: replace
       - source_labels: [__param_target]
+        separator: ;
+        regex: (.*)
         target_label: instance
-      - action: labelmap
-        regex: __meta_kubernetes_ingress_label_(.+)
+        replacement: $1
+        action: replace
+      - separator: ;
+        regex: __meta_kubernetes_service_label_(.+)
+        replacement: $1
+        action: labelmap
       - source_labels: [__meta_kubernetes_namespace]
+        separator: ;
+        regex: (.*)
         target_label: kubernetes_namespace
-      - source_labels: [__meta_kubernetes_ingress_name]
+        replacement: $1
+        action: replace
+      - source_labels: [__meta_kubernetes_service_name]
+        separator: ;
+        regex: (.*)
         target_label: kubernetes_name
-    - job_name: 'kubernetes-pods'
+        replacement: $1
+        action: replace
+    - job_name: kubernetes-pods
+      honor_timestamps: true
+      scrape_interval: 1m
+      scrape_timeout: 10s
+      metrics_path: /metrics
+      scheme: http
       kubernetes_sd_configs:
       - role: pod
       relabel_configs:
-      - action: labelmap
+      - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scrape]
+        separator: ;
+        regex: "true"
+        replacement: $1
+        action: keep
+      - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_path]
+        separator: ;
+        regex: (.+)
+        target_label: __metrics_path__
+        replacement: $1
+        action: replace
+      - source_labels: [__address__, __meta_kubernetes_pod_annotation_prometheus_io_port]
+        separator: ;
+        regex: ([^:]+)(?::\d+)?;(\d+)
+        target_label: __address__
+        replacement: $1:$2
+        action: replace
+      - separator: ;
         regex: __meta_kubernetes_pod_label_(.+)
+        replacement: $1
+        action: labelmap
       - source_labels: [__meta_kubernetes_namespace]
-        action: replace
+        separator: ;
+        regex: (.*)
         target_label: kubernetes_namespace
-      - source_labels: [__meta_kubernetes_pod_name]
+        replacement: $1
         action: replace
+      - source_labels: [__meta_kubernetes_pod_name]
+        separator: ;
+        regex: (.*)
         target_label: kubernetes_pod_name
+        replacement: $1
+        action: replace
 ---
 apiVersion: v1
 kind: Service
